IVYPORTAL-9630: Portal uses the standard ivy Theme for portal - Handled feedback: Fixed color of button on table header - Handled feedback: clean code - Handled feedback:Scrollbar not displayed full in all Portal pages
Former-commit-id: 8acb3beebe5c9b9b503be95f790546d3d5f9a6eb

--- a/AxonIvyPortal/PortalTemplate/webContent/resources/css/template.css
+++ b/AxonIvyPortal/PortalTemplate/webContent/resources/css/template.css
@@ -332,6 +332,11 @@
   line-height: 2;
 }
 
+.layout-wrapper .layout-main .layout-topbar {
+  position: relative;
+  width: 100%;
+}
+
 /* END SERENITY TOP BAR */
 /* SERENITY MAIN LAYOUT */
 .layout-wrapper {
